[gd_scene load_steps=9 format=3 uid="uid://dhaqcrrolyagl"]

[ext_resource type="Script" path="res://Assets/Sprites/Whale Fall Environment/lever.gd" id="1_2efg8"]
[ext_resource type="Texture2D" uid="uid://c0alj7mlha8rr" path="res://Assets/Sprites/Whale Fall Environment/Lever.png" id="2_33odp"]
[ext_resource type="AudioStream" uid="uid://mmh6tc8yfm6n" path="res://Assets/Sound/Sfx/DoorRattle.wav" id="3_vpkc1"]
[ext_resource type="AudioStream" uid="uid://dux3wsfudxrt7" path="res://Assets/Sound/Sfx/LeverPull.wav" id="4_dice5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vdqen"]
size = Vector2(19.6875, 20)

[sub_resource type="Animation" id="Animation_vg8rt"]
resource_name = "Pull"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0)]
}

[sub_resource type="Animation" id="Animation_ghlye"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_p58wb"]
_data = {
"Pull": SubResource("Animation_vg8rt"),
"RESET": SubResource("Animation_ghlye")
}

[node name="Area2D" type="Area2D"]
scale = Vector2(4, 4)
collision_layer = 524288
collision_mask = 524288
script = ExtResource("1_2efg8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.625, 0)
scale = Vector2(4, 4)
shape = SubResource("RectangleShape2D_vdqen")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(4, 4)
texture = ExtResource("2_33odp")
hframes = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite2D"]
libraries = {
"": SubResource("AnimationLibrary_p58wb")
}
speed_scale = 0.8

[node name="DoorSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_vpkc1")

[node name="LeverSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_dice5")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
